--- a/templates/nuevo_producto.html
+++ b/templates/nuevo_producto.html
@@ -67,7 +67,7 @@
     </div>
 
     <footer class="mt-12 text-center text-sm text-slate-500">
-        <p>&copy; {{ current_year }} Mi Empresa S.A. - Sistema de Integración de Plataformas</p>
+        <p>&copy; {{ current_year }} Mañana es feriado S.A. - Sistema de Integración de Plataformas</p>
     </footer>
 
 </body>
